# picoWeatherAPI

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  NOTICE.md  db.js  openapi.yaml  package-lock.json  package.json  server.js
.github/workflows/: build-and-push.yml
routes/: docs.js  weather.js
src/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt  flags.h  weather.c  weather.h
src/database/: CMakeLists.txt  database.c  database.h
src/db/: CMakeLists.txt  database.c  database.h
src/http/: CMakeLists.txt  handlers.c  handlers.h  router.h  router.l  server.c  server.h
src/utils/: CMakeLists.txt  utils.c  utils.h
utils/: weatherUtils.js
